# test-app

./: .dockerignore  .env.docker.template  .env.template  .gitignore  CHANGELOG.md  Dockerfile  README.md  all_objectives.md  approaches.md  backup-database.sh  cli.py  conversation_memory.json  conversation_test_IA2.md  docker-compose.yml  docker-setup.sh  explain.md  objectives.md  objectives_export.md  pipeline_trace_IA2.md  pyproject.toml  retrieved_content_IA2.md  retrieved_content_IA2_v2.md  teaching_plan_IA2.md
data/: objectives_export copy.json  objectives_export.json  objectives_from_resources.json  socratic_tutor.db
docs/: database_structure.puml
eval/: instance_a_gold_v1.json
exports/: question_objective_mappings.json  question_objective_mappings_from_gold.json  questions_from_attachments.json  questions_markdown_export.json  questions_raw_export.json
resources/: WAS_Learning_Objectives_1-127.md  WAS_Learning_Objectives_128-332.md  all_domains_objectives.json  all_domains_objectives.md  associations.json  domain_III_renumbered.md  domain_II_renumbered.md  domain_I_renumbered.md  gold_mapping copy.json  gold_mapping.json  gold_mapping_Q106_Q125_enriched.json  gold_mapping_Q126_Q145_enriched.json  gold_mapping_Q146_Q165_enriched.json  gold_mapping_Q166_Q185_enriched.json  gold_mapping_Q186_Q190_enriched.json  gold_mapping_Q1_Q20.json  gold_mapping_Q21_Q40.json  gold_mapping_Q41_Q60.json  gold_mapping_Q61_Q65.json  gold_mapping_Q66_Q85_enriched (1).json  gold_mapping_Q86_Q105_enriched.json  gold_mapping_aligned_Q1_Q20.json  gold_mapping_sample.json  new_objectives.json  objectives.bkp.md  objectives_deeper_assessment_optimized.json  objectives_deeper_assessment_optimized_plus_gaps.json  objectives_deeper_assessment_optimized_plus_gaps.md  objectives_gap_supplement.json  original_feedback_question_ids.txt  q53_q65_enriched.json  question_ids_with_generated_feedback.txt  questions_markdown_export_full_wcag_semantic_feedback.json  questions_semantic_mapping_v2.json  (+5 more)
(+163 files in other folders)
